fixed appearing scrollbar for podcast post in list view and remove text formatting in handlebars template

--- a/assets/scss/components/cards/main.scss
+++ b/assets/scss/components/cards/main.scss
@@ -223,7 +223,7 @@ $alphaville-card__color--yellow-tint3: #b35400;
 				position: absolute;
 				top: 0;
 				right: 0;
-				margin: -10px -9px 0 0;
+				margin: -10px 0 0 0;
 			}
 		}
 	}
